# private_agent

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
app/agent/: graph.py  llm.py  schema.py  state.py
app/agent/nodes/: chat.py  intent.py  requestion.py  retrieve.py
app/agent/prompts/: agent.py  intent.py  requestion.py  summary.py
app/client/: database.py  milvus.py
app/core/: config.py  logger.py
app/pkg/: __init__.py
app/pkg/embedding/: silicon_flow.py
app/pkg/loader/: file_loader.py  lenovo.py
app/repository/: chat_message.py  document.py  knowledge.py  user.py  vector_store.py
app/server/: lifespan.py  server.py
app/server/dependency/: dependency.py
app/server/models/: __init__.py  chat_message.py  document.py  knowledge.py  user.py
app/server/router/: __init__.py  auth.py  chat.py  knowledge.py  router.py
app/server/schema/: auth.py  chat.py  document.py  ingest.py  knowledge.py
app/service/: auth.py  chat.py  document.py  ingest.py  knowledge.py  search.py
commands/chat/: main.py
commands/retrieve/: main.py
commands/server/: main.py
config/: app.yaml
docker/langfuse/: docker-compose.yaml
docker/milvus/: docker-compose.yaml
docker/mineru/: docker-compose.yaml
tests/: conftest.py
tests/test_agent/: test_config.py
tests/test_cli/: test_chat.py  test_retrieve.py  test_server.py
tests/test_embedding/: test_silicon_flow.py  test_silicon_flow_integration.py
tests/test_rag/: test_config.py  test_service.py
web/rag/: next.config.ts  package.json  pnpm-lock.yaml
web/rag/app/: globals.css  (+1 more)
(+12 files in other folders)
