[project]
name = "private_agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "loguru>=0.7",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.18",
    "httpx>=0.28",
    "mineru>=3.1.12",
    "omegaconf>=2.3",
    "python-dotenv>=1.0",
    "langchain>=1.3.0",
    "langgraph>=1.2.0",
    "langchain-community>=0.4.1",
    "bs4>=0.0.2",
    "requests>=2.34.2",
    "markdownify>=1.2.2",
    "pymilvus>=2.5.0",
    "langchain-mineru>=0.1.3",
    "sqlalchemy>=2.0",
    "langchain-qwq>=0.3.4",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "aiosqlite>=0.22.1",
    "langmem>=0.0.30",
    "langfuse>=4.6.1",
    "bcrypt>=4.2.0",
    "pyjwt>=2.9.0",
]

[dependency-groups]
dev = ["pytest>=9.0.3"]

[tool.pytest.ini_options]
markers = ["integration: 需要真实 API/网络请求的测试，默认跳过"]
addopts = "-m 'not integration'"
